MERN-Stack-Ecommerce-App-master/fusion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/force-ssl-redirect":"true","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"fusion-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"20-235-128-106.sslip.io","http":{"paths":[{"backend":{"service":{"name":"fusion-frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"},{ [...]
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2026-07-03T07:37:28Z"
  generation: 2
  name: fusion-ingress
  namespace: default
  resourceVersion: "475319"
  uid: 594f39cd-7cb2-4317-a00e-d0d8195ca13d
spec:
  ingressClassName: nginx
  rules:
  - host: 20-235-128-106.sslip.io
    http:
      paths:
      - backend:
          service:
            name: fusion-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: fusion-backend-service
            port:
              number: 5000
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - 20-235-128-106.sslip.io
    secretName: fusion-tls
status:
  loadBalancer:
    ingress:
    - ip: 20.235.128.106
